Cycles hair particle system modifier obeys viewport visibility as well #34654

Closed
opened 2013-03-16 03:22:03 +01:00 by William Chargin · 3 comments

Relates to: #33918

%%%--- Operating System, Graphics card ---

  1. Linux Mint 14 "Nadia" 64-bit, GTX 680 with Intel Core i7 processor

  2. Windows 7 Professional 32-bit, Intel Core i5 processor with built-in graphics card

  3. Mac mini (late 2009) with Snow Leopard 10.8.6 (I think), Intel Core 2 Duo Processor with built-in graphics card

    • Blender version with error, and version that worked ---
      2.66 (r55075:55077) gave error, haven't seen one that works

    • Short description of error ---
      Cycles hair will only render when the hair particle system modifier on the emitter object is set to visible in the render (camera icon) AND in the viewport (eye icon).

In other words, it will only render if ParticleSystemModifier.show_render && ParticleSystemModifier.show_viewport evaluates to True.

Expected behavior is that the value of ParticleSystemModifier.show_viewport has no effect.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create a blend file with particle system hair. Set to strand render, experimental, CPU, etc. (attached)
Go to modifiers (wrench) panel. Turn off viewport visibility by clicking the eye icon.
Hit F12 or Preferences panel > Render pane > Image or Render menu > Render Image. Only the default cube will render; no hair.
Turn viewport/render visibility on and off and observe.%%%

**Relates to**: #33918 %%%--- Operating System, Graphics card --- 1. Linux Mint 14 "Nadia" 64-bit, GTX 680 with Intel Core i7 processor 2. Windows 7 Professional 32-bit, Intel Core i5 processor with built-in graphics card 3. Mac mini (late 2009) with Snow Leopard 10.8.6 (I think), Intel Core 2 Duo Processor with built-in graphics card - Blender version with error, and version that worked --- 2.66 (r55075:55077) gave error, haven't seen one that works - Short description of error --- Cycles hair will only render when the hair particle system modifier on the emitter object is set to visible in the render (camera icon) AND in the viewport (eye icon). In other words, it will only render if `ParticleSystemModifier.show_render && ParticleSystemModifier.show_viewport` evaluates to True. Expected behavior is that the value of ParticleSystemModifier.show_viewport has no effect. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create a blend file with particle system hair. Set to strand render, experimental, CPU, etc. (attached) Go to modifiers (wrench) panel. Turn off viewport visibility by clicking the eye icon. Hit F12 or Preferences panel > Render pane > Image or Render menu > Render Image. Only the default cube will render; no hair. Turn viewport/render visibility on and off and observe.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thanks for the report, fixed in SVN 55332. %%%

%%%Thanks for the report, fixed in SVN 55332. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34654
No description provided.