Fix for [#34654] Cycles hair particle system modifier obeys viewport visibility as well * Now Show Render and Show Viewport flags work independently and correct.